# SPDX-FileCopyrightText: 2026 A Labs GmbH
# SPDX-License-Identifier: Apache-2.0

[project]
name = "rtkprog"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "crccheck>=1.3.1",
    "pyserial>=3.5",
]

[project.scripts]
rtkprog = "rtkprog.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort

[tool.hatch.version]
source = "vcs"  # reads from git tags

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
